	  stacks as well as the heap.  Suggested by David Sidrane (2013-11-1).
	* configs/spark/usbmsc:  Add spark USB MSC configuration.  From David
	  Sidrane (2013-11-1).
	* fs/fat/fs_fat32util.c:  In one error return case, the error return
	  value was not being set, making the failure look like success. From
	  David Sidrane (2011-10-1).
	* drivers/usbdev/usbmsc.c and usbmsc_scsi.c:  pthread_join() does not
	  work if called from a different task group than the pthread.  This
	  is correct behavior, but a problem.  The correct solution would be
	  configure the USB MSC thread to a task, however, this workaround
	  from David Sidrane plugs the hole for now (2013-11-1).
	* drivers/mtd/mtd_config.c:  Reduce configuration header size.  From
	  Ken Pettit (2013-11-1).
	* drivers/mtd/sst25.c:  Improved write performance by fixing a bug
	  that prevented operation in the faster write mode.  The code did
	  not wait on the last write complete before issuing the WRDI  The
	  loop in general failed to wait on the fist 2 bytes after the
	  SST25_AAI if the next 2 were FF FF, then it would reissue the
	  address but not cancel the write. Reorganized to always wait for
	  completion after and address with data write and on any data
	  write so  that the device is complete before WRDI is sent.  From
	  David Sidrane (2013-11-2).
	* configs/sama5/src/sam_can.c:  Add CAN initialization logic
	  and fix a data alignment problem (2013-11-3).
	* drivers/mtd/mtd_config.c:  Updated configuration driver from
	  Ken Pettit (2013-11-4).
	* configs/sim/configdata:  MTD configuration driver unit test for
	  the simulation platform.  From Ken Pettit (2013-11-4).
	* configs/mikroe-stm32f4/fulldemo: Configuration updated by Ken
	  Pettit (2013-11-4).
	* arch/arm/src/stm32/stm32_usbdev.c:  Correct EP0 state handling
	  logic when buffers larger than the EP0 packet size are sent.
	  Also add support for decoded USB trace strings.  From David
	  Sidrane (2013-11-5).
